added we-love page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
+<nav>
+	<ul>
+		<li><a href="we-love.html">Bribe the Instructors</a></li>
+		<li><a href="#">Instructor Bios</a></li>
+	</ul>
+
+</nav>
 <div id="instructors">
       <section>
         <h4> Our instructors are big ol' weirdos.</h4>
